--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1,3 +1,20 @@
-html { height: 100% }
-body { height: 100%; margin: 0; padding: 0 }
-#map_canvas { height: 100% }
+html { height: 100%}
+body { height: 100%; margin: 0; padding: 0 ;background-image:url('../img/bg.png');}
+#map_canvas {width:100%;height:100%;display:none;}
+#startButton
+{
+  text-align:center;
+  display:block;
+  width:30%;
+  color:#F2DEDA;
+  font-size:300%;
+  border-radius:5px;
+  border:1px solid #000;
+  background:-moz-linear-gradient(center top , #D95338 0%, #AE432E 100%);;
+  text-decoration:none;
+  border-color:#803121;
+  margin:0 auto;
+  margin-top:50px;
+  
+  padding:20px;
+}
