--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -3,18 +3,25 @@ body { height: 100%; margin: 0; padding: 0 ;background-image:url('../img/bg.png'
 #map_canvas {width:100%;height:100%;display:none;}
 #startButton
 {
-  text-align:center;
-  display:block;
-  width:30%;
-  color:#F2DEDA;
-  font-size:300%;
-  border-radius:5px;
-  border:1px solid #000;
-  background:-moz-linear-gradient(center top , #D95338 0%, #AE432E 100%);;
-  text-decoration:none;
-  border-color:#803121;
-  margin:0 auto;
-  margin-top:50px;
-  
-  padding:20px;
+    text-align:center;
+    display:block;
+    width:30%;
+    color:#F2DEDA;
+    font-size:300%;
+    border-radius:5px;
+    border:1px solid #000;
+    background:-moz-linear-gradient(center top , #D95338 0%, #AE432E 100%);
+    text-decoration:none;
+    border-color:#803121;
+    margin:0 auto;
+    margin-top:50px;
+    padding:20px;
+}
+#infoPanel {
+    display:none;
+    background-color:#981273;
+    width:100%;
+    position:absolute;
+    bottom:0px;
+    margin:0px auto;
 }
