--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1,5 +1,9 @@
 html { height: 100%}
-body { height: 100%; margin: 0; padding: 0 ;background-image:url('../img/bg.png');}
+body { height: 100%; margin: 0; padding: 0 ;background-image:url('../img/bg.png');
+    font-family: 'PT Sans',Arial,sans-serif;
+    font-size: 13px;
+
+}
 #map_canvas {width:100%;height:100%;display:none;}
 #startButton
 {
@@ -8,20 +12,48 @@ body { height: 100%; margin: 0; padding: 0 ;background-image:url('../img/bg.png'
     width:30%;
     color:#F2DEDA;
     font-size:300%;
-    border-radius:5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px; 
     border:1px solid #000;
-    background:-moz-linear-gradient(center top , #D95338 0%, #AE432E 100%);
+    background:-moz-linear-gradient(center top, #faa796, #d06c57 5%, #ae432e 100%);
+	background:-webkit-gradient(linear, left top, left bottom, from(#faa796), to(#ae432e), color-stop(0.05, #d06c57));
+	background:-o-linear-gradient(top, #faa796, #d06c57 5%, #ae432e 100%);
     text-decoration:none;
     border-color:#803121;
     margin:0 auto;
     margin-top:50px;
     padding:20px;
 }
+
 #infoPanel {
+    font-size:10px;
     display:none;
-    background-color:#981273;
+    color:#666666;
+    background-color:#E6E6E6;
     width:100%;
     position:absolute;
     bottom:0px;
     margin:0px auto;
+    box-shadow: 0 0 3px #000000;
+    padding:10px;
 }
+#infoPanel ul {
+    margin:0px;
+    padding-left:15px;
+}
+#infoPanel h2 {
+    color:#CD0141;
+    margin:3px;
+   
+}
+#infoPanel #totalInfo,#privateInfo,#publicInfo {
+    float:left;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px; 
+    border:1px solid gray;
+    padding:4px;
+    margin-right:4px;
+}
+
