--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -4,7 +4,7 @@ body { height: 100%; margin: 0; padding: 0 ;background-image:url('../img/bg.png'
     font-size: 13px;
 
 }
-#map_canvas {width:100%;height:100%;display:none;}
+#canvas {width:100%;height:100%;display:none;}
 #startButton
 {
     text-align:center;
