--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1,12 +1,23 @@
-html { height: 100%}
-body { height: 100%; margin: 0; padding: 0 ;background-image:url('../img/bg.png');
-    font-family: 'PT Sans',Arial,sans-serif;
-    font-size: 13px;
+html {
+    height:100%;
+    }
 
-}
-#canvas {width:100%;height:100%;display:none;}
-#startButton
-{
+body {
+    height:100%;
+    margin:0;
+    padding:0;
+    background-image:url('../img/bg.png');
+    font-family:'PT Sans',Arial,sans-serif;
+    font-size:15px;
+    }
+
+#canvas {
+    width:100%;
+    height:100%;
+    display:none;
+    }
+
+#startButton {
     text-align:center;
     display:block;
     width:30%;
@@ -17,17 +28,17 @@ body { height: 100%; margin: 0; padding: 0 ;background-image:url('../img/bg.png'
     border-radius: 5px; 
     border:1px solid #000;
     background:-moz-linear-gradient(center top, #faa796, #d06c57 5%, #ae432e 100%);
-	background:-webkit-gradient(linear, left top, left bottom, from(#faa796), to(#ae432e), color-stop(0.05, #d06c57));
-	background:-o-linear-gradient(top, #faa796, #d06c57 5%, #ae432e 100%);
+    background:-webkit-gradient(linear, left top, left bottom, from(#faa796), to(#ae432e), color-stop(0.05, #d06c57));
+    background:-o-linear-gradient(top, #faa796, #d06c57 5%, #ae432e 100%);
     text-decoration:none;
     border-color:#803121;
     margin:0 auto;
     margin-top:50px;
     padding:20px;
-}
+    }
 
 #infoPanel {
-    font-size:10px;
+    font-size:14px;
     display:none;
     color:#666666;
     background-color:#E6E6E6;
@@ -37,23 +48,53 @@ body { height: 100%; margin: 0; padding: 0 ;background-image:url('../img/bg.png'
     margin:0px auto;
     box-shadow: 0 0 3px #000000;
     padding:10px;
-}
+    }
+
 #infoPanel ul {
     margin:0px;
     padding-left:15px;
-}
+    }
+
 #infoPanel h2 {
     color:#CD0141;
     margin:3px;
-   
-}
-#infoPanel #totalInfo,#privateInfo,#publicInfo {
+    }
+
+#infoPanel div {
     float:left;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px; 
     border:1px solid gray;
-    padding:4px;
-    margin-right:4px;
+    padding:6px;
+    margin:3px;
+    width:200px;
 }
 
+#infoPanel em {
+    font-weight:bold;
+    }
+
+#infoPanel li em {
+    font-weight:normal;
+    }
+
+#infoPanel #totalInfo {
+    border-color: #058DC7;
+    background-color: #CEE6F2;
+    }
+
+#infoPanel #privateInfo {
+    border-color: #77AB13;
+    background-color: #D9E6C3;
+    }
+
+#infoPanel #publicInfo {
+    border-color: #AE432E;
+    background-color: #F2D4CE;
+    }
+
+#infoPanel #footer {
+    border-color: #E6C26E;
+    background-color: #FAF6D4;
+    }
