--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -13,7 +13,11 @@ body {
 
 #canvas {
     width:100%;
-    height:100%;
+    position:absolute;
+    top:0px;
+    left:0px;
+    right:0px;
+    bottom:70px;
     display:none;
     }
 
@@ -21,23 +25,64 @@ body {
     text-align:center;
     display:block;
     width:30%;
-    color:#F2DEDA;
     font-size:300%;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px; 
-    border:1px solid #000;
-    background:-moz-linear-gradient(center top, #faa796, #d06c57 5%, #ae432e 100%);
-    background:-webkit-gradient(linear, left top, left bottom, from(#faa796), to(#ae432e), color-stop(0.05, #d06c57));
-    background:-o-linear-gradient(top, #faa796, #d06c57 5%, #ae432e 100%);
+    border:1px solid;
+    
+    border-color:#1495cc #2b8ab3 #066d99;
+	background:-moz-linear-gradient(top, #afe3fa, #6cb8d9 5%, #088ec8 100%);
+	background:-webkit-gradient(linear, left top, left bottom, from(#afe3fa), to(#088ec8), color-stop(0.05, #6cb8d9));
+	background:-o-linear-gradient(top, #afe3fa, #6cb8d9 5%, #088ec8 100%);
+	color:#ebf9ff;
+    
     text-decoration:none;
-    border-color:#803121;
     margin:0 auto;
     margin-top:50px;
     padding:20px;
     }
+    
+#startButton:hover {
+    	background:-moz-linear-gradient(top, #afe3fa, #6cb8d9 5%, #077bad 100%);
+	background:-webkit-gradient(linear, left top, left bottom, from(#afe3fa), to(#077bad), color-stop(0.05, #6cb8d9));
+	background:-o-linear-gradient(top, #afe3fa, #6cb8d9 5%, #077bad 100%);
+	color:#fff;
+}
+
+
+
+
+.button.blue, button.blue { 
+	border-color:#1495cc #2b8ab3 #066d99;
+	background:-moz-linear-gradient(top, #afe3fa, #6cb8d9 5%, #088ec8 100%);
+	background:-webkit-gradient(linear, left top, left bottom, from(#afe3fa), to(#088ec8), color-stop(0.05, #6cb8d9));
+	background:-o-linear-gradient(top, #afe3fa, #6cb8d9 5%, #088ec8 100%);
+	color:#ebf9ff;
+}
+.button.blue:hover, button.blue:hover {
+	background:-moz-linear-gradient(top, #afe3fa, #6cb8d9 5%, #077bad 100%);
+	background:-webkit-gradient(linear, left top, left bottom, from(#afe3fa), to(#077bad), color-stop(0.05, #6cb8d9));
+	background:-o-linear-gradient(top, #afe3fa, #6cb8d9 5%, #077bad 100%);
+	color:#fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #infoPanel {
+    height:70px;
     font-size:14px;
     display:none;
     color:#666666;
@@ -52,6 +97,7 @@ body {
     }
 
 #infoPanel table {
+    height:100%;
     width:100%;
     border-collapse:collapse;
     }
@@ -66,69 +112,15 @@ body {
 
 #infoPanel table #foo {
     background-color: #FAF6D4;
-    }
-
-
-
-
-
-/*
-#infoPanel ul {
-    margin:0px;
-    padding-left:15px;
-    }
-
-#infoPanel h2 {
-    color:#CD0141;
-    margin:3px;
-    }
-
-#infoPanel #privateInfo,#publicInfo,footer {
-    #float:left;
-    -webkit-border-radius: 5px;
-       -moz-border-radius: 5px;
-            border-radius: 5px; 
-    border:1px solid gray;
-    padding:6px;
-    margin:2px;
-}
-
-#infoPanel em {
-    font-weight:bold;
-    }
-
-#infoPanel li em {
-    font-weight:normal;
-    }
-
-#infoPanel #wrapInfo {
-    width:100%;
-    overflow:hidden;
-}
-
-#infoPanel #totalInfo {
-    border-color: #058DC7;
-    background-color: #CEE6F2;
-    }
-
-#infoPanel #privateInfo {
-    float:left;
-    width:48%;
-    border-color: #77AB13;
-    background-color: #D9E6C3;
+    text-align:center;
     }
     
+#priTi {
+    color:#69990F;
+    font-weight:bold;
+}
 
-#infoPanel #publicInfo {
-width:47%;
-float:right;
-    border-color: #AE432E;
-    background-color: #F2D4CE;
-    }
-
-#infoPanel footer {
-    border-color: #E6C26E;
-    background-color: #FAF6D4;
-    padding:2px;
-    }
-*/
+#priPu {
+    color:#AE432E;
+    font-weight:bold;
+}
